some isse solved

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ MAIL_PASSWORD=Pratik@2022
 MAIL_ENCRYPTION=tls
 
 MAIL_FROM=yagnik.technocomet@gmail.com
-MAIL_NAME='Dixita Project'
+MAIL_NAME='Akash Project'
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
