--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -28,15 +28,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USERNAME=inquiry@fruxinfo.com
-MAIL_PASSWORD=Pratik@2022
-MAIL_ENCRYPTION=tls
-
-MAIL_FROM=yagnik.technocomet@gmail.com
-MAIL_NAME='Akash Project'
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=48fe9f1fd95e7e
+MAIL_PASSWORD=d46391c78694b3
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
